--- a/public/grunt/package.json
+++ b/public/grunt/package.json
@@ -24,6 +24,7 @@
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-cssmin": "^0.14.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-sass": "^0.9.2",
