--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 	"require": {
 		"laravel/framework": "5.0.*",
 		"barryvdh/laravel-ide-helper": "^2.1",
-		"mews/captcha": "^2.1"
+		"mews/captcha": "^2.1",
+		"doctrine/dbal": "^2.5"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
