--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 		"laravel/framework": "5.0.*",
 		"barryvdh/laravel-ide-helper": "^2.1",
 		"mews/captcha": "^2.1",
-		"doctrine/dbal": "^2.5"
+		"doctrine/dbal": "^2.5",
+		"predis/predis": "^1.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
