--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 		"barryvdh/laravel-ide-helper": "^2.1",
 		"mews/captcha": "^2.1",
 		"doctrine/dbal": "^2.5",
-		"predis/predis": "^1.0"
+		"predis/predis": "^1.0",
+		"guzzlehttp/guzzle": "^6.2"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
