--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
 		"mews/captcha": "^2.1",
 		"doctrine/dbal": "^2.5",
 		"predis/predis": "^1.0",
-		"guzzlehttp/guzzle": "^6.2"
+		"guzzlehttp/guzzle": "^6.2",
+		"pda/pheanstalk": "^3.1"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
